vaccel_headers += files([
  'vaccel_ops.h',
  'blas.h',
  'exec.h',
  'fpga.h',
  'genop.h',
  'image.h',
  'minmax.h',
  'noop.h',
  'opencv.h',
  'tf.h',
  'tflite.h',
  'torch.h',
])

vaccel_sources += files([
  'blas.c',
  'exec.c',
  'fpga.c',
  'genop.c',
  'image.c',
  'minmax.c',
  'noop.c',
  'opencv.c',
  'tf.c',
  'tflite.c',
  'torch.c',
])
